# datapilot

./: .env.example  .gitignore  DataPilot-Frontend-v0.html  DataPilot-Frontend-v1.html  Dockerfile  Dockerfile.sandbox  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.sh
datasets/: download_databases.sh  spider_eval_100.json
examples/: basic_usage.py
src/: __init__.py  config.py  evaluate.py  generator.py  rag_store.py
src/agent/: __init__.py  graph.py  nodes.py  state.py
src/api/: __init__.py  app.py  routes.py  schemas.py
src/auth/: __init__.py  jwt_handler.py  models.py  rbac.py  store.py
src/datasources/: __init__.py  api_source.py  base.py  csv_source.py  registry.py  sql_source.py
src/glossary/: __init__.py  glossary.py
src/sandbox/: __init__.py  executor.py
src/security/: __init__.py  sql_validator.py
src/semantic/: __init__.py  metrics.py  planner.py  prompts.py
src/session/: __init__.py  store.py
src/tools/: __init__.py  chart_tool.py  registry.py
tests/: conftest.py
tests/auth/: test_jwt_handler.py  test_rbac.py
tests/datasources/: test_csv_source.py
tests/security/: test_sql_validator.py
