[project]
name = "dataagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=2.14.0",
    "docker>=6.1.0",
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.0.40",
    "mysql-connector-python>=8.2.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pandas>=2.1.0",
    "pydantic>=2.5.0",
    "pymysql>=1.1.0",
    "python-multipart>=0.0.6",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
    "uvicorn[standard]>=0.24.0",
]
