[project]
name = "dataagent"
version = "0.1.0"
description = "面向自助查数的智能数据分析 Agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=2.14.0",
    "duckdb>=0.10.0",
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.0.40",
    "mysql-connector-python>=8.2.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pandas>=2.1.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
    "sqlglot>=23.0.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "bcrypt>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
